started work on Stripe checkout button.

--- a/themes/countrycrafts/pages/store-item.htm
+++ b/themes/countrycrafts/pages/store-item.htm
@@ -8,7 +8,7 @@ handle = "Catalog\Product"
 identifier = "{{ :slug }}"
 value = "{{ :slug }}"
 ==
-{# Fix issues with Images #}
+{# TODO: Fix issues with Images #}
 <section class="flex flex-col space-y-16 my-16 place-items-center">
     <h1 class="text-5xl text-center text-mom-red font-dancing">Store - {{Product.title}}</h1>
     {% partial 'cards/purchase-card'
