adding product backpage and developing plugin to udpate products

--- a/themes/countrycrafts/pages/cancel.htm
+++ b/themes/countrycrafts/pages/cancel.htm
@@ -4,6 +4,6 @@ title = "Cancel Checkout"
 meta_title = "Cancel Checkout | Welcome to Em's Country Crafts!"
 
 ==
-<section>
+<section class="flex flex-col space-y-16 my-16 place-items-center">
     <p>Forgot to add something to your cart? Shop around then come back to pay!</p>
 </section>
