--- a/themes/countrycrafts/pages/success.htm
+++ b/themes/countrycrafts/pages/success.htm
@@ -4,7 +4,7 @@ title = "Successful Checkout"
 meta_title = "Successful Checkout | Welcome to Em's Country Crafts!"
 
 ==
-<section>
+<section class="flex flex-col space-y-16 my-16 place-items-center">
     <p>
         We appreciate your business! If you have any questions, please email
         <a href="mailto:orders@example.com">orders@example.com</a>.
